--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,8 +11,13 @@ body {
     Helvetica, Arial, 'Lucida Grande', sans-serif;
   font-weight: 300;
   /* margin-top: 20px; */
+}
+
+.wrapper {
   overflow-x: hidden;
-  max-width: 100%;
+  position: relative;
+  left: 0;
+  right: 0;
 }
 
 .disable-scroll {
