--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,7 +10,6 @@ body {
   font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
     Helvetica, Arial, 'Lucida Grande', sans-serif;
   font-weight: 300;
-  /* margin-top: 20px; */
 }
 
 .wrapper {
@@ -18,10 +17,7 @@ body {
   position: relative;
   left: 0;
   right: 0;
-}
-
-.disable-scroll {
-  height: 100%;
+  min-height: 100vh;
 }
 
 li {
@@ -135,7 +131,7 @@ nav {
 }
 
 .m-home-page-menu {
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .m-home-page-menu ul li {
@@ -143,7 +139,7 @@ nav {
   font-weight: 300;
   text-align: right;
   letter-spacing: 0.5rem;
-  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 /* Exhibitions */
